--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
 	  <version>0.0.1-SNAPSHOT</version>
 	  <type>jar</type>
 	 </dependency>
+	 <dependency>
+	  <groupId>org.json</groupId>
+	  <artifactId>json</artifactId>
+	  <version>20140107</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
