--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
 	  <version>20140107</version>
 	  <type>jar</type>
 	 </dependency>
+	 <dependency>
+	  <groupId>org.apache.tomcat.embed</groupId>
+	  <artifactId>tomcat-embed-websocket</artifactId>
+	  <version>8.5.28</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
