--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,15 @@
 	  <version>8.5.28</version>
 	  <type>jar</type>
 	 </dependency>
+	 <dependency>
+	  <groupId>org.springframework.data</groupId>
+	  <artifactId>spring-data-mongodb</artifactId>
+	  <type>jar</type>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.springframework.boot</groupId>
+	  <artifactId>spring-boot-starter-data-mongodb</artifactId>
+	 </dependency>
 	</dependencies>
 
 	<build>
